--- a/todo-src/index.html
+++ b/todo-src/index.html
@@ -34,9 +34,16 @@
           <button class="btn btn-danger pull-right" type="button" ng-click="deleteItem(do)">
             <span class="glyphicon glyphicon-trash " aria-hidden="true"></span>
           </button>
+          <button class = "btn btn-primary pull-right" type = "button" ng-click = "showEdits(do)">
+            <span class = "glyphicon glyphicon-pencil" aria-hidden = "true"></span>
+          </buttom>
 
         </li>
       </ul>
+
+      <div ng-show = "edits">
+        <input type = "text" class = "form-control" placeholder = "Edit item here" ng-model = "editBox" ng-keypress = "editItem($event)">
+      </div>
     </div>
     
   </body>
