--- a/todo-src/index.html
+++ b/todo-src/index.html
@@ -25,7 +25,11 @@
         </div><!-- /input-group -->
         
       <h2>stuff i gotta do asap</h2>
+
       
+      <h3>Item Count: <span class="label label-default">{{todos.length}}</span></h3>
+
+
       <ul class="list-group">
         <!-- http://www.w3schools.com/css/css_float.asp -->
         <li class="list-group-item clearfix" ng-repeat="do in todos">
