Added clear functionalities

--- a/todo-src/index.html
+++ b/todo-src/index.html
@@ -21,6 +21,13 @@
               Add
               <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
             </button>
+
+            <!--- Test Clear all feature-->
+            <button class="btn btn-default" type="button" ng-click="clearItems()">
+              clear
+              <span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>
+            </button>
+
           </span>
         </div><!-- /input-group -->
 
