--- a/todo-src/index.html
+++ b/todo-src/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="https://code.angularjs.org/1.4.3/angular.js"></script>
     <link rel="stylesheet" href="style.css" />
@@ -15,7 +16,7 @@
 <div id="todo" class="col-xs-6 col-xs-offset-3" ng-controller="MainCtrl">
 
     <div class="input-group">
-        <input id="add_item_text" type="text" class="form-control" placeholder="Item to add to todo list" ng-model="newItem">
+        <input id="add_item_text" type="text" class="form-control" placeholder="Item to add to todo list" ng-model="newItem.text">
           <span class="input-group-btn">
             <button id="add_item_button" class="btn btn-default" type="button" ng-click="addItem()">
                 Add
@@ -28,6 +29,13 @@
             </button>
           </span>
     </div><!-- /input-group -->
+    <!-- Priority level -->
+    <span><strong>Priority Level:</strong></span>
+    <select ng-model="newItem.priority">
+        <option value="now">Now</option>
+        <option value="tomorrow">Tomorrow</option>
+        <option value="someday">Someday</option>
+    </select>
 
     <h2>stuff i gotta do asap</h2>
 
@@ -42,6 +50,7 @@
         <li class="list-group-item clearfix" ng-repeat="do in todos">
             <input type="checkbox" ng-model="do.done"/>
             <span class="done-{{do.done}}">{{do.text}}</span>
+            <span class="label label-default">Priority: <strong>{{do.priority}}</strong></span>
             <button class="btn btn-danger pull-right" type="button" ng-click="deleteItem(do)">
                 <span class="glyphicon glyphicon-trash " aria-hidden="true"></span>
             </button>
