--- a/todo-src/index.html
+++ b/todo-src/index.html
@@ -62,6 +62,11 @@
     </ul>
     <div ng-show = "edits">
         <input type = "text" class = "form-control" placeholder = "Edit item here" ng-model = "editBox" ng-keypress = "editItem($event)">
+        <select ng-model = "editPriority">
+            <option value="now">Now</option>
+            <option value="tomorrow">Tomorrow</option>
+            <option value="someday">Someday</option>
+        </select>
     </div>
 </div>
 
